@@ -5,6 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Fix: Improved value validation for nested primary key and clustered by
+   columns in INSERT statements.
+
  - Added case-insensitive regex operator ~*
 
  - Support PCRE compatible regular expressions
